Add a failed acceptance test

--- a/GOOS_SampleTests/GOOS_SampleTests.csproj
+++ b/GOOS_SampleTests/GOOS_SampleTests.csproj
@@ -113,6 +113,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BudgetCreateSteps.cs" />
+    <Compile Include="features\BudgetCreate.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BudgetCreate.feature</DependentUpon>
+    </Compile>
+    <Compile Include="PageObjects\BudgetCreatePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +127,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="features\BudgetCreate.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>BudgetCreate.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GOOS_Sample\GOOS_Sample.csproj">
